@@ -1,3 +1,10 @@
+2005-06-13  Luis Villa <luis.villa@gmail.com>
+
+	* jhbuild/modtypes/mozillamodule.py:
+
+	Fix version truncation in Marco's last fix, and install nss
+	headers correctly-ish (fixing bug #154213).
+	
 2005-06-12  Marco Pesenti Gritti  <mpg@redhat.com>
 
 	* jhbuild/modtypes/mozillamodule.py:
